Fixed the Navigation bar Overlapping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2928,6 +2928,7 @@ span.stButton_gradient,
       padding-left: 10px;
       
     }
-  
-  
- 
+.navbar-nav
+{
+  margin-top: 30px;
+}
